# Sistem-Monitorizare-Stocuri

./: CLAUDE.md  CMakeLists.txt  exportmanager.cpp  exportmanager.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
LibrarieModele/: Produs.cpp  Produs.h  Tranzactie.h
ManagerStocare/: IStocare.h  jsonstorage.cpp  jsonstorage.h
NivelStocareDate/: Tranzactiemanager.h  warehousemanager.cpp  warehousemanager.h
NivelUI/: addproductdialog.cpp  addproductdialog.h  editproductdialog.cpp  editproductdialog.h  productdetailsdialog.cpp  productdetailsdialog.h  settingsdialog.cpp  settingsdialog.h  transactiondialog.cpp  transactiondialog.h
styles/: styles.qss
tests/: mock_stocare.h  tst_exportmanager.cpp  tst_jsonstorage.cpp  tst_produs.cpp  tst_tranzactie.cpp  tst_tranzactiestorage.cpp  tst_warehousemanager.cpp
